# nvfuser

./: .gitmodules  CMakeLists.txt  arith.cpp  arith.h  batch_change.sh  codegen.cpp  codegen.h  compute_at.cpp  compute_at.h  compute_at_map.cpp  compute_at_map.h  contiguity.cpp  contiguity.h  disjoint_set.h  dispatch.cpp  dispatch.h  evaluator_common.cpp  evaluator_common.h  executor.cpp  executor.h  executor_kernel_arg.cpp  executor_kernel_arg.h  executor_launch_params.cpp  executor_launch_params.h  executor_utils.cpp  executor_utils.h  expr_evaluator.cpp  expr_evaluator.h  fusion.cpp  fusion.h  fusion_segmenter.cpp  fusion_segmenter.h  graph_fuser.cpp  grouped_reduction.cpp  grouped_reduction.h  index_compute.cpp  index_compute.h  inline_propagator.cpp  inline_propagator.h  inlining.h  (+137 more)
examples/sinh_extension/: main.cpp
examples/sinh_libtorch/: CMakeLists.txt  main.cpp
ops/: alias.cpp  alias.h  all_ops.h  composite.cpp  composite.h  normalization.cpp  normalization.h
python_frontend/: fusion_cache.cpp  fusion_cache.h  fusion_definition.cpp  fusion_definition.h  fusion_interface.cpp  fusion_interface.h  fusion_record.h  python_bindings.cpp
python_frontend/test/: test_nvfuser_fusion_cache.cpp  test_nvfuser_fusion_definition.cpp  test_nvfuser_fusion_record.cpp
scheduler/: all_schedulers.h  compile_time_info.h  heuristic.h  matmul.cpp  matmul.h  mma_utils.cpp  mma_utils.h  normalization.cpp  normalization.h  pointwise.cpp  pointwise.h  pointwise_heuristic.h  pointwise_utils.cpp  pointwise_utils.h  reduction.cpp  reduction.h  reduction_heuristic.h  reduction_utils.cpp  reduction_utils.h  registry.cpp  registry.h  transpose.cpp  transpose.h  transpose_heuristic.h  utils.cpp  utils.h  vectorize_helper.cpp  vectorize_helper.h
src/: arith.cpp  arith.h  codegen.cpp  compute_at_map.cpp  compute_at_map.h  contiguity.cpp  contiguity.h  disjoint_set.h  dispatch.cpp  dispatch.h  evaluator_common.cpp  executor.cpp  executor.h  executor_kernel_arg.h  executor_utils.cpp  executor_utils.h  expr_evaluator.cpp  expr_evaluator.h  fusion.cpp  fusion.h  fusion_segmenter.cpp  fusion_segmenter.h  graph_fuser.cpp  grouped_reduction.cpp  index_compute.cpp  index_compute.h  inlining.cpp  instrumentation.h  interface.cpp  interface.h  ir_base_nodes.cpp  ir_base_nodes.h  ir_builder.cpp  ir_builder.h  ir_cloner.cpp  ir_cloner.h  ir_container.h  ir_graphviz.cpp  ir_graphviz.h  ir_interface_nodes.h  (+75 more)
src/ops/: alias.cpp  composite.cpp  normalization.cpp  normalization.h
src/python_frontend/: fusion_cache.cpp  fusion_cache.h  fusion_interface.cpp  fusion_interface.h  fusion_record.h  python_bindings.cpp  python_bindings_register.cpp  python_bindings_test.cpp
src/python_frontend/test/: test_nvfuser_fusion_definition.cpp  test_nvfuser_fusion_record.cpp
src/scheduler/: all_schedulers.h  heuristic.h  matmul.cpp  matmul.h  mma_utils.cpp  normalization.cpp  normalization.h  pointwise.cpp  pointwise.h  pointwise_heuristic.h  pointwise_utils.cpp  reduction.cpp  reduction.h  reduction_utils.cpp  reduction_utils.h  registry.cpp  registry.h  transpose.cpp  transpose.h  transpose_heuristic.h  utils.cpp  utils.h  vectorize_helper.cpp
test/: test_gpu.cpp  test_gpu1.cpp  test_gpu2.cpp  test_gpu3.cpp  test_gpu_fused_reduction.cpp  test_gpu_rng.cu  test_gpu_scheduler_utils.cpp  test_gpu_shift.cpp  test_gpu_swizzle.cpp  test_gpu_tensor_factories.cpp  test_gpu_tensorcore.cpp  test_gpu_transpose.cpp  test_gpu_utils.cpp  test_gpu_validator.h  test_gpu_view.cpp  test_utils.h
